--- a/ReleasePackaging.csproj
+++ b/ReleasePackaging.csproj
@@ -47,6 +47,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="IDisposableAnalyzers" Version="2.0.6">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="StyleCop.Analyzers" Version="1.1.1-beta.61">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -57,7 +61,7 @@
 		<AdditionalFiles Include="stylecop.json" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net47'">
+	<ItemGroup Condition="'$(TargetFramework)' == 'net47' OR '$(TargetFramework)' == 'net46' OR '$(TargetFramework)' == 'netstandard2.0' OR '$(TargetFramework)' == 'net461' OR '$(TargetFramework)' == 'net462' OR '$(TargetFramework)' == 'net471' OR '$(TargetFramework)' == 'net472' OR '$(TargetFramework)' == 'netcoreapp3.0' OR '$(TargetFramework)' == 'netcoreapp2.2' OR '$(TargetFramework)' == 'netcoreapp2.1' OR '$(TargetFramework)' == 'netcoreapp2.0'">
 		<PackageReference Include="System.IO.Compression">
 			<Version>4.3.0</Version>
 		</PackageReference>
@@ -66,109 +70,7 @@
 		</PackageReference>
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net46'">
-		<PackageReference Include="System.IO.Compression">
-			<Version>4.3.0</Version>
-		</PackageReference>
-		<PackageReference Include="System.IO.Compression.ZipFile">
-			<Version>4.3.0</Version>
-		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-		<PackageReference Include="System.IO.Compression">
-			<Version>4.3.0</Version>
-		</PackageReference>
-		<PackageReference Include="System.IO.Compression.ZipFile">
-			<Version>4.3.0</Version>
-		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net461'">
-		<PackageReference Include="System.IO.Compression">
-			<Version>4.3.0</Version>
-		</PackageReference>
-		<PackageReference Include="System.IO.Compression.ZipFile">
-			<Version>4.3.0</Version>
-		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net462'">
-		<PackageReference Include="System.IO.Compression">
-			<Version>4.3.0</Version>
-		</PackageReference>
-		<PackageReference Include="System.IO.Compression.ZipFile">
-			<Version>4.3.0</Version>
-		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net471'">
-		<PackageReference Include="System.IO.Compression">
-			<Version>4.3.0</Version>
-		</PackageReference>
-		<PackageReference Include="System.IO.Compression.ZipFile">
-			<Version>4.3.0</Version>
-		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net472'">
-		<PackageReference Include="System.IO.Compression">
-			<Version>4.3.0</Version>
-		</PackageReference>
-		<PackageReference Include="System.IO.Compression.ZipFile">
-			<Version>4.3.0</Version>
-		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
-		<PackageReference Include="System.IO.Compression">
-			<Version>4.3.0</Version>
-		</PackageReference>
-		<PackageReference Include="System.IO.Compression.ZipFile">
-			<Version>4.3.0</Version>
-		</PackageReference>
-	</ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.2'">
-		<PackageReference Include="System.IO.Compression">
-			<Version>4.3.0</Version>
-		</PackageReference>
-		<PackageReference Include="System.IO.Compression.ZipFile">
-			<Version>4.3.0</Version>
-		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.1'">
-		<PackageReference Include="System.IO.Compression">
-			<Version>4.3.0</Version>
-		</PackageReference>
-		<PackageReference Include="System.IO.Compression.ZipFile">
-			<Version>4.3.0</Version>
-		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
-		<PackageReference Include="System.IO.Compression">
-			<Version>4.3.0</Version>
-		</PackageReference>
-		<PackageReference Include="System.IO.Compression.ZipFile">
-			<Version>4.3.0</Version>
-		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net45'">
-		<PackageReference Include="System.IO.Compression">
-			<Version>4.3.0</Version>
-		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net452'">
-		<PackageReference Include="System.IO.Compression">
-			<Version>4.3.0</Version>
-		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net451'">
+	<ItemGroup Condition="'$(TargetFramework)' == 'net45' OR '$(TargetFramework)' == 'net452' OR '$(TargetFramework)' == 'net451'">
 		<PackageReference Include="System.IO.Compression">
 			<Version>4.3.0</Version>
 		</PackageReference>
