--- a/ReleasePackaging.csproj
+++ b/ReleasePackaging.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks>netcoreapp3.0;netcoreapp2.2;netcoreapp2.1;netstandard2.0;net452;net462;net47;net472</TargetFrameworks>
@@ -13,10 +13,11 @@
 		<PackageLicenseUrl>https://github.com/Elskom/ReleasePackaging/blob/master/LICENSE</PackageLicenseUrl>
 		<Copyright>Copyright (c) 2018-2019</Copyright>
 		<Description>A .NET library for handling application's release packaging command line.</Description>
-		<PackageReleaseNotes>Initial release.</PackageReleaseNotes>
-		<Version>1.0.0</Version>
+		<PackageReleaseNotes>Added reference assemblies.</PackageReleaseNotes>
+		<Version>1.0.1</Version>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<SignAssembly>false</SignAssembly>
+		<ProduceReferenceAssembly>true</ProduceReferenceAssembly>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -48,21 +49,21 @@
 
 	<ItemGroup>
 		<PackageReference Include="IDisposableAnalyzers" Version="2.1.1">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="StyleCop.Analyzers" Version="1.1.1-beta.61">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 		</PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.6.3">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="2.6.3">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
+		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.6.3">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="2.6.3">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
