--- a/ReleasePackaging.csproj
+++ b/ReleasePackaging.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netcoreapp3.0;netcoreapp2.2;netcoreapp2.1;netstandard2.0;net452;net462;net47;net472</TargetFrameworks>
+		<TargetFrameworks>netcoreapp1.0;netcoreapp1.1;netcoreapp2.1;netcoreapp2.2;netcoreapp3.0;netstandard1.3;netstandard1.4;netstandard1.5;netstandard1.6;netstandard2.0;net45;net451;net452;net46;net461;net462;net47;net471;net472</TargetFrameworks>
 		<AssemblyName>ReleasePackaging</AssemblyName>
 		<LangVersion>latest</LangVersion>
 		<Company>Els_kom org.</Company>
@@ -19,6 +19,21 @@
 		<SignAssembly>false</SignAssembly>
 		<ProduceReferenceAssembly>true</ProduceReferenceAssembly>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<!-- Add reference binaries. -->
+		<TfmSpecificPackageFile Include="$(OutputPath)/ref/">
+			<PackagePath>ref/$(TargetFramework)</PackagePath>
+		</TfmSpecificPackageFile>
+		<!-- Add documentation file to each of the reference assembly paths. -->
+		<TfmSpecificPackageFile Include="$(OutputPath)/$(ProjectName).xml">
+			<PackagePath>ref/$(TargetFramework)</PackagePath>
+		</TfmSpecificPackageFile>
+		<!-- Add debugging symbols. -->
+		<TfmSpecificPackageFile Include="$(OutputPath)/$(ProjectName).pdb">
+			<PackagePath>lib/$(TargetFramework)</PackagePath>
+		</TfmSpecificPackageFile>
+	</ItemGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<DefineConstants>DEBUG;TRACE</DefineConstants>
@@ -64,25 +79,16 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
+		<PackageReference Include="System.IO.Compression">
+			<Version>4.3.0</Version>
+		</PackageReference>
+		<PackageReference Include="System.IO.Compression.ZipFile" Condition="!$(TargetFramework.StartsWith('net45'))">
+			<Version>4.3.0</Version>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
 		<AdditionalFiles Include="stylecop.json" />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net47' OR '$(TargetFramework)' == 'net46' OR '$(TargetFramework)' == 'netstandard2.0' OR '$(TargetFramework)' == 'net461' OR '$(TargetFramework)' == 'net462' OR '$(TargetFramework)' == 'net471' OR '$(TargetFramework)' == 'net472' OR '$(TargetFramework)' == 'netcoreapp3.0' OR '$(TargetFramework)' == 'netcoreapp2.2' OR '$(TargetFramework)' == 'netcoreapp2.1' OR '$(TargetFramework)' == 'netcoreapp2.0'">
-		<PackageReference Include="System.IO.Compression">
-			<Version>4.3.0</Version>
-		</PackageReference>
-		<PackageReference Include="System.IO.Compression.ZipFile">
-			<Version>4.3.0</Version>
-		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net45' OR '$(TargetFramework)' == 'net452' OR '$(TargetFramework)' == 'net451'">
-		<PackageReference Include="System.IO.Compression">
-			<Version>4.3.0</Version>
-		</PackageReference>
 	</ItemGroup>
 
 </Project>
