--- a/ReleasePackaging.csproj
+++ b/ReleasePackaging.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netcoreapp1.0;netcoreapp1.1;netcoreapp2.1;netcoreapp2.2;netcoreapp3.0;netstandard1.3;netstandard1.4;netstandard1.5;netstandard1.6;netstandard2.0;net45;net451;net452;net46;net461;net462;net47;net471;net472;net48</TargetFrameworks>
+		<TargetFrameworks>netcoreapp2.1;netcoreapp2.2;netcoreapp3.0;netstandard2.0;net45;net451;net452;net46;net461;net462;net47;net471;net472;net48</TargetFrameworks>
 		<AssemblyName>ReleasePackaging</AssemblyName>
 		<LangVersion>latest</LangVersion>
 		<Company>Els_kom org.</Company>
@@ -19,6 +19,10 @@
 		<SignAssembly>false</SignAssembly>
 		<ProduceReferenceAssembly>true</ProduceReferenceAssembly>
 		<NoWarn>$(NoWarn);NU5104;NU5118</NoWarn>
+		<SignAssembly>true</SignAssembly>
+		<AssemblyOriginatorKeyFile>Elskom.snk</AssemblyOriginatorKeyFile>
+		<DelaySign>false</DelaySign>
+		<PackageOutputPath Condition="'$(SolutionName)' == 'build_all_packages'">$(MSBuildThisFileDirectory)..\artifacts\</PackageOutputPath>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -53,6 +57,9 @@
 		<TfmSpecificPackageFile Include="$(ProjectDir)/$(ProjectName).ruleset">
 			<PackagePath>src/$(ProjectName)/$(ProjectName).ruleset</PackagePath>
 		</TfmSpecificPackageFile>
+		<TfmSpecificPackageFile Include="$(ProjectDir)/Elskom.snk">
+			<PackagePath>src/$(ProjectName)/Elskom.snk</PackagePath>
+		</TfmSpecificPackageFile>
 	</ItemGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -75,14 +82,20 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<None Remove=".git" />
 		<None Remove=".gitignore" />
 		<None Remove="appveyor.yml" />
+		<None Remove="azure-pipelines.yml" />
 		<None Remove="LICENSE" />
 		<None Remove="readme.md" />
 		<None Remove="stylecop.json" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="GitBuildInfo" Version="0.18.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="IDisposableAnalyzers" Version="2.1.2">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -99,10 +112,11 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="System.IO.Compression">
+		<Reference Include="System.IO.Compression" Condition="$(TargetFramework.StartsWith('net4'))" />
+		<PackageReference Include="System.IO.Compression" Condition="!$(TargetFramework.StartsWith('net4'))">
 			<Version>4.3.0</Version>
 		</PackageReference>
-		<PackageReference Include="System.IO.Compression.ZipFile" Condition="!$(TargetFramework.StartsWith('net45'))">
+		<PackageReference Include="System.IO.Compression.ZipFile" Condition="!$(TargetFramework.StartsWith('net4'))">
 			<Version>4.3.0</Version>
 		</PackageReference>
 	</ItemGroup>
@@ -110,5 +124,19 @@
 	<ItemGroup>
 		<AdditionalFiles Include="stylecop.json" />
 	</ItemGroup>
+
+	<ItemGroup Condition="Exists('..\GitInformation\src\GitInformation\AraHaan.GitInformation.csproj')">
+		<ProjectReference Include="..\GitInformation\src\GitInformation\AraHaan.GitInformation.csproj" />
+	</ItemGroup>
+
+	<ItemGroup Condition="!Exists('..\GitInformation\src\GitInformation\AraHaan.GitInformation.csproj')">
+		<PackageReference Include="AraHaan.GitInformation">
+			<Version>1.0.0</Version>
+		</PackageReference>
+	</ItemGroup>
+
+	<Target Name="GitBuildInfo" BeforeTargets="PrepareForBuild">
+		<GitBuildInfoTask OutputPath="$(ProjectDir)\GitAssemblyInfo.cs" AssemblyType="Elskom.Generic.Libs.ReleasePackaging" />
+	</Target>
 
 </Project>
