--- a/ReleasePackaging.csproj
+++ b/ReleasePackaging.csproj
@@ -60,11 +60,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="GitBuildInfo" Version="0.24.0">
+    <PackageReference Include="GitBuildInfo" Version="0.25.0-preview-97517171">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="IDisposableAnalyzers" Version="3.3.7">
+    <PackageReference Include="IDisposableAnalyzers" Version="3.3.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
@@ -97,7 +97,7 @@
 
   <ItemGroup Condition="!Exists('..\GitInformation\src\GitInformation\AraHaan.GitInformation.csproj') OR '$(SolutionName)' != 'build_all_packages'">
     <PackageReference Include="AraHaan.GitInformation">
-      <Version>1.0.2-preview-97172757</Version>
+      <Version>1.0.2-preview-97526750</Version>
     </PackageReference>
   </ItemGroup>
 
